# biofilm-analysis-py

./: .gitignore  README.md  experiment_config.json  main.py  parameter_tuning.ipynb  pyproject.toml  requirements.txt
biofilm_analysis/: analysis.py  batch_analysis.py  biomass.py  config.py  io_utils.py  preprocess.py  registration.py  segmentation.py
